--- a/.github/workflows/deploy-actions.yaml
+++ b/.github/workflows/deploy-actions.yaml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Start Prefect Worker
         run: |
-          prefect worker start --pool "github-pool"
+          prefect worker start --pool "flows-actions"
       
       - name: Deploy Prefect Flow
         run: |
